# CenterLevenshtein

./: CMakeLists.txt  I_10_10_1.txt  I_10_20_2.txt  I_10_30_0.txt  I_10_30_2.txt  I_10_40_0.txt  I_10_40_1.txt  I_10_50_0.txt  I_10_50_2.txt  I_15_10_0.txt  I_15_20_0.txt  I_15_20_1.txt  I_15_20_2.txt  I_15_30_0.txt  I_15_50_0.txt  I_15_50_2.txt  I_20_10_0.txt  I_20_20_0.txt  I_20_20_1.txt  I_20_30_1.txt  I_20_40_1.txt  I_20_40_2.txt  I_20_50_0.txt  I_20_50_1.txt  I_20_50_2.txt  I_5_10_0.txt  I_5_10_2.txt  I_5_20_1.txt  I_5_40_0.txt  I_5_40_2.txt  I_5_50_0.txt  Makefile  README.md  extended_binary.py  levenshtein.cpp  levensthein_hayashida.py  matching_binary_linear_digitalized.py  path_binary_digitalized.py
R_Esperimenti_paper/: I_10_10_2.txt  I_10_20_1.txt  I_10_3_0.txt  I_10_3_1.txt  I_10_3_2.txt  I_10_4_0.txt  I_10_4_1.txt  I_10_4_2.txt  I_10_50_1.txt  I_15_10_1.txt  I_15_10_2.txt  I_15_30_1.txt  I_15_3_0.txt  I_15_3_1.txt  I_15_3_2.txt  I_15_40_0.txt  I_15_4_0.txt  I_15_4_1.txt  I_15_4_2.txt  I_15_50_1.txt  I_20_10_2.txt  I_20_3_0.txt  I_20_3_1.txt  I_20_3_2.txt  I_20_40_0.txt  I_20_4_0.txt  I_20_4_1.txt  I_20_4_2.txt  I_5_10_1.txt  I_5_20_2.txt  I_5_30_0.txt  I_5_30_1.txt  I_5_3_0.txt  I_5_3_1.txt  I_5_3_2.txt  I_5_4_0.txt  I_5_4_1.txt  I_5_4_2.txt  I_5_5_0.txt  extended_binary.py  (+14 more)
ecc/: hamming_10_3.txt  hamming_40_1.txt  hamming_50_2.txt  rm_10_2.txt  rm_20_1.txt  rm_30_1.txt
pools/: hamming_10_2.txt  hamming_20_3.txt  hamming_30_1.txt  hamming_40_3.txt  hamming_50_3.txt  rm_10_1.txt  rm_10_3.txt  rm_20_2.txt  rm_40_2.txt  rm_40_3.txt  rm_50_1.txt  rm_50_2.txt  (+1 more)
(+42 files in other folders)
